--- a/src/components/recommend/recommend.styl
+++ b/src/components/recommend/recommend.styl
@@ -1,32 +1,23 @@
-@import "~common/styl/variable"
-  .recommend
-    position fixed
+@import "~common/styl/variable.styl"
+  .recommend-wrapper
     width 100%
-    top 88px
-    bottom 0
-    .recommend-content
-      height 100%
-      overflow hidden
-      .slider-wrapper
-        position relative
-        overflow hidden
+    height 100%
+    .slider-container
+      height 180px
+      position relative
+      .slider-nav
+        display block
+        height 100%
         width 100%
-        height 0
-        padding-top 40%
-        .slider-content
-          position absolute
-          top 0
-          left 0
-          width 100%
-          height 100%
-      .recommend-list
-        .list-title
-          height 65px
-          line-height 65px
-          text-align center
-          font-size $font-size-medium
-          color $color-theme
-        .item
+    .album-wrapper
+      .title
+        height 65px
+        line-height 65px
+        text-align center
+        font-size $font-size-medium
+        color $color-theme
+      .album-list
+        .album-item
           display flex
           box-sizing border-box
           align-items center
@@ -45,11 +36,12 @@
             line-height 20px
             overflow hidden
             font-size $font-size-medium
-            .name
-              margin-bottom 10px
+            .album-name
+              margin-bottom 6px
               color $color-text
-            .desc
-              color $color-text-d
+            .singer-name, .public-time
+              font-size $font-size-small
+              color $color-text-l
       .loading-content
         width 100%
         position absolute
