--- a/src/components/recommend/recommend.styl
+++ b/src/components/recommend/recommend.styl
@@ -2,6 +2,8 @@
   .recommend-wrapper
     width 100%
     height 100%
+    .scroll-wrapper
+      height 100%
     .slider-container
       height 180px
       position relative
