--- a/src/common/styl/index.styl
+++ b/src/common/styl/index.styl
@@ -1,3 +1,16 @@
 @import "./reset.styl"
 @import "./base.styl"
 @import "./icon.styl"
+
+
+.fade-enter
+  transform translate3d(100%, 0, 0)
+  &.fade-enter-active
+    transition transform .3s ease-in
+    transform translate3d(0, 0, 0)
+
+.fade-exit
+  transform translate3d(0, 0, 0)
+  &.fade-exit-active
+    transform translate3d(100%, 0, 0)
+    transition transform .3s ease-in
