--- a/src/components/recommend/recommend.styl
+++ b/src/components/recommend/recommend.styl
@@ -11,36 +11,32 @@
         display block
         height 100%
         width 100%
-    .album-wrapper
-      .title
-        height 65px
-        line-height 65px
-        text-align center
-        font-size $font-size-medium
-        color $color-theme
-      .album-list
-        .album-item
-          display flex
-          box-sizing border-box
-          align-items center
-          padding 0 20px 20px 20px
-          .icon
-            flex 0 0 60px
-            width 60px
-            padding-right 20px
-            img
-              display block
-          .text
-            flex 1
-            display flex
-            flex-direction column
-            justify-content center
-            line-height 20px
-            overflow hidden
-            font-size $font-size-medium
-            .album-name
-              margin-bottom 6px
-              color $color-text
-            .singer-name, .public-time
-              font-size $font-size-small
-              color $color-text-l
+    .recommend-list
+      .list-title
+        height: 65px
+        line-height: 65px
+        text-align: center
+        font-size: $font-size-medium
+        color: $color-theme
+      .item
+        display: flex
+        box-sizing: border-box
+        align-items: center
+        padding: 0 20px 20px 20px
+        .icon
+          flex: 0 0 60px
+          width: 60px
+          padding-right: 20px
+        .text
+          display: flex
+          flex-direction: column
+          justify-content: center
+          flex: 1
+          line-height: 20px
+          overflow: hidden
+          font-size: $font-size-medium
+          .name
+            margin-bottom: 10px
+            color: $color-text
+          .desc
+            color: $color-text-d
