--- a/src/base/header/header.styl
+++ b/src/base/header/header.styl
@@ -1,28 +1,31 @@
 @import "~common/styl/variable.styl"
 @import "~common/styl/mixin.styl"
-.header-wrapper
-  position fixed
-  width 100%
-  height 55px
-  text-align center
-  z-index: 3
-  .header-back
+
+.m-header
+  position relative
+  height 44px
+  text-align center 
+  color $color-theme
+  .icon
+    display inline-block
+    vertical-align top 
+    margin-top 6px
+    width 30px
+    height 32px
+    margin-right 9px
+    bg-image('logo')
+    background-size 30px 32px
+  .text
+    display: inline-block
+    vertical-align top
+    line-height 44px
+    font-size $font-size-large
+  .mine
     position absolute
-    top: 0
-    left: 6px
-    .icon-back
+    top 0
+    right: 0
+    .icon-mine
       display: block
-      padding: 10px
-      font-size: $font-size-large-x
+      padding: 12px
+      font-size: 20px
       color: $color-theme
-  .title
-      position: absolute
-      top: 0
-      left: 10%
-      z-index: 3
-      width: 80%
-      no-wrap()
-      text-align: center
-      line-height: 40px
-      font-size: $font-size-large
-      color: $color-text
