--- a/src/base/listview/listview.styl
+++ b/src/base/listview/listview.styl
@@ -1,13 +1,11 @@
 @import "~common/styl/variable"
 
-.list-view
+.listview
   position: relative
   width: 100%
   height: 100%
   overflow: hidden
   background: $color-background
-  .scroll-wrapper
-    height 100%
   .list-group
     padding-bottom: 30px
     .list-group-title
