singerDetail for singer

--- a/src/components/musicList/musicList.styl
+++ b/src/components/musicList/musicList.styl
@@ -80,6 +80,7 @@
     background: $color-background
     .scroll-wrapper
       overflow visible
+      height 100%
       .song-list-wrapper
         padding: 20px 30px
     
