--- a/src/components/recommend/recommend.styl
+++ b/src/components/recommend/recommend.styl
@@ -1,7 +1,9 @@
 @import "~common/styl/variable.styl"
   .recommend-wrapper
     width 100%
-    height 100%
+    position fixed
+    top 88px
+    bottom 0
     .scroll-wrapper
       height 100%
     .slider-container
