--- a/src/common/styl/index.styl
+++ b/src/common/styl/index.styl
@@ -6,15 +6,15 @@
 .fade-enter
   transform translate3d(100%, 0, 0)
   &.fade-enter-active
-    transition transform .3s ease-in
     transform translate3d(0, 0, 0)
+    transition transform .2s ease-in
 
 .fade-exit
   transform translate3d(0, 0, 0)
   &.fade-exit-active
     transform translate3d(100%, 0, 0)
-    transition transform .3s ease-in
-    
+    transition transform .2s ease-in
+
 .player
   .normal-player
     &.normal-enter
@@ -43,3 +43,39 @@
         .bottom
           transform: translate3d(0, 100px, 0)
           transition: transform 0.4s cubic-bezier(0.86, 0.18, 0.82, 1.32)
+
+.search-list
+  .search-item
+    // 动画初始位置
+    &.list-enter
+      height 0
+      // 动画进入位置
+      &.list-enter-active
+        height 40px
+        transition height 0.1s
+
+    &.list-exit
+      height 40px
+      &.list-exit-active
+        height 0
+        transition height 0.1s
+
+
+.confirm-fade-enter-active
+  animation confirm-fade-in 0.3s
+  .confirm-content
+    animation confirm-zoom 0.3s
+
+@keyframes confirm-fade-in
+  0%
+    opacity 0
+  100%
+    opacity 1
+
+@keyframes confirm-zoom
+  0%
+    transform scale(0)
+  50%
+    transform scale(1.1)
+  100%
+    transform scale(1)
