--- a/src/base/confirm/confirm.styl
+++ b/src/base/confirm/confirm.styl
@@ -8,6 +8,10 @@
   bottom 0px
   z-index 990
   background-color $color-background-d
+  &.confirm-fade-enter-active
+    animation confirm-fade-in 0.3s
+    .confirm-content
+      animation confirm-zoom 0.3s
   .confirm-wrapper
       position: absolute
       top: 50%
@@ -37,3 +41,17 @@
             color: $color-text-d
             &.left
               border-right: 1px solid $color-background-d
+
+@keyframes confirm-fade-in
+  0%
+    opacity 0
+  100%
+    opacity 1
+
+@keyframes confirm-zoom
+  0%
+    transform scale(0)
+  50%
+    transform scale(1.1)
+  100%
+    transform scale(1)
