--- a/src/common/styl/index.styl
+++ b/src/common/styl/index.styl
@@ -52,12 +52,12 @@
       // 动画进入位置
       &.list-enter-active
         height 40px
-        transition height 0.1s
+        transition height 0.3s
     &.list-exit
       height 40px
       &.list-exit-active
         height 0
-        transition height 0.1s
+        transition height 0.3s
 
 .playlist
   &.list-fade-enter
@@ -68,15 +68,15 @@
       opacity 1
       transition all 0.3s
       .list-wrapper
-        transform translate3d(0, 0 0)
+        transform translate3d(0, 0, 0)
         transition: all 0.3s
   &.list-fade-exit
     opacity 1
     .list-wrapper
-      transform translate3d(0, 0 0)
+      transform translate3d(0, 0, 0)
     &.list-fade-exit-active
       opacity: 0
-      transition all 0.3s
+      transition all 0.2s
       .list-wrapper
         transform: translate3d(0, 100%, 0)
-        transition all 0.3s
+        transition all 0.2s
