--- a/src/common/styl/index.styl
+++ b/src/common/styl/index.styl
@@ -80,3 +80,18 @@
       .list-wrapper
         transform: translate3d(0, 100%, 0)
         transition all 0.2s
+
+  .list-content
+    .item
+      // 动画初始位置
+      &.list-enter
+        height 0
+        // 动画进入位置
+        &.list-enter-active
+          height 40px
+          transition height 0.2s
+      &.list-exit
+        height 40px
+        &.list-exit-active
+          height 0
+          transition height 0.2s
