--- a/src/components/addSong/addSong.styl
+++ b/src/components/addSong/addSong.styl
@@ -34,6 +34,7 @@
       top: 165px
       bottom: 0
       width: 100%
+      background inherit 
       .list-scroll
         height: 100%
         overflow: hidden
