--- a/src/components/addSong/addSong.styl
+++ b/src/components/addSong/addSong.styl
@@ -8,6 +8,10 @@
   width: 100%
   z-index: 200
   background: $color-background
+  transform translate3d(100%, 0, 0)
+  transition all 0.3s
+  &.fade
+    transform translate3d(0, 0, 0)
   .header
     position: relative
     height: 44px
